# opae-sdk

./: .travis.yml  CMakeLists.txt  opae.spec  opae.spec.in
ase/: CMakeLists.txt  README.txt  client.bat  server.bat
ase/api/src/: enum.c  umsg.c
ase/emulator/: CMakeLists.txt
ase/emulator/include/: afu_model_factory_verilog.h  afu_model_verilog.h  ase_types_int.h  ccip_common.h  ccip_emulator.h  ccip_std_afu.h  dma_buffer_emu.h  fpga_command.h  fpga_simulator_factory_modelsim.h  fpga_simulator_factory_verilator.h  fpga_simulator_modelsim.h  fpga_simulator_verilator.h  iafu_model.h  iafu_model_factory.h  ibase.h  ifpga_emulator.h  ifpga_interface.h  ifpga_simulator.h  ifpga_simulator_factory.h  mmio_emu.h
ase/emulator/plantuml/: emulator.puml
ase/emulator/src/: ccip_emulator.cpp
ase/rtl/: ase_top.sv  sources.txt
ase/rtl/device_models/: sources.txt
ase/rtl/device_models/pr_hssi/: pr_hssi_loopback.sv  sources.txt
ase/scripts/: generate_ase_environment.py
ase/sw/: app_backend.c  ase_common.h  ase_ops.c  protocol_backend.c
cmake/modules/: compiler_config.cmake
common/include/opae/: types_enum.h
libopae/: api-shell.c
libopae/plugins/xfpga/: sysfs.c  types_int.h
libopae/plugins/xfpga/metrics/: metrics_int.h  metrics_max10.c  metrics_max10.h  metrics_utils.c
libopae/src/: buffer.c  enum.c  intel-fpga.h
libpacboard/: CMakeLists.txt  pacboard.c  pacboard.h
packaging/opae/rpm/: create
safe_string/: snprintf_support.c
testing/mock/: test_system.cpp  test_system.h
tools/base/fpgainfo/: board.c
tools/c++utils/: process.cpp
tools/coreidle/: main.c
tools/extra/fpgabist/dma_N3000/: fpga_dma_test.c
tools/extra/pac/fpgabist/dma_vc/: fpga_dma_test.c
tools/fpgabist/dma/: fpga_dma.c
tools/fpgad/: CMakeLists.txt
tools/fpgad/api/: CMakeLists.txt
tools/fpgad/plugins/fpgad-vc/: CMakeLists.txt
tools/fpgad/plugins/fpgad-xfpga/: CMakeLists.txt
tools/libopae++/: fpga.cpp  fpga.h
tools/ras/: main.c
